chapter15/sample.h

int gcd(int x, int y);
int in_mandel(double x0, double y0, int n);
int divide(int a, int b, int *remainder);
double avg(double *a, int n);
double distance(Point *p1, Point *p2);
typedef struct Point{
    doublex,y;
};
            